# tinyexpr-plusplus

./: CMakeLists.txt  example2.cpp  example3.cpp  example4.cpp  tinyexpr.cpp  tinyexpr.h
